# Expert_op4grid_recommender

./: .coverage  .dockerignore  .gitignore  AUTHORS.txt  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  MIGRATION_PLAN.md  README.md  SKIP_VISUALIZATION_GUIDE.md  pr_body_config.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.claude/: settings.json
.claude/hooks/: init-sync-check.sh
.github/workflows/: ci.yml  code-quality.yml  deploy-huggingface.yml  python-publish.yml
data/: lignes_a_deconnecter.csv  lignes_a_monitorer.csv
data/action_space/: actions_repas_most_frequent_topologies_revised.json  reduced_model_actions.json  reduced_model_actions_test.json  reduced_model_actions_test_pypowsybl.json
data/bare_env_small_grid_test/: grid.xiidm
data/change_nothing_env_assistant/: config.py
data/env_dijon_v2_assistant/: all_actions.json  config.py  difficulty_levels.json  grid.xiidm  grid_layout.json  grid_layout_simple.json  prods_charac.csv  some_test_time_series.py  some_tests_grid_iidm.py  thermal_limits_year_season.json
deploy/huggingface/: README.md  SETUP.md
docs/: HANDOFF_rte7000.md  README.md  SETUP_SUMMARY.md  code-quality-analysis.md  load_shedding_design.md  manoeuvre_carte_geographique.md  manoeuvre_ihm.md  manoeuvre_implementation_plan.md  manoeuvre_module.md  manoeuvre_optimisations.md  manoeuvre_plugins.md  manoeuvre_regles.md  plan_dataset_rte7000.md  postes_n_jeux_de_barres.md  recommender_models.md  renewable_curtailment_design.md  superposition_module.md
docs/architecture/: configuration.md  overview.md  recommender_models.md  simulation-pipeline.md
docs/archive/: SETUP_SUMMARY.md  code-quality-analysis.md
docs/dataset_rte7000/: GUIDE.md  HANDOFF.md  README.md
docs/design/: antenna_overflow_graph.md  load_shedding_design.md  recommender_models.md
docs/manoeuvre/: art_de_la_manoeuvre.md  carte_geographique.md  ihm.md  implementation_plan.md  module.md  optimisations.md  postes_n_jeux_de_barres.md  regles.md
docs/notes/: code-quality-analysis.md  migration_plan.md
docs/recommender/: antenna_overflow_graph.md  load_shedding.md  renewable_curtailment.md  superposition_module.md
docs/release-notes/: v0.2.2.post1.md  v0.2.2.post2.md  v0.2.3.md  v0.2.3.post1.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.9.md  v0.3.0.md  v0.3.0.post1.md  v0.3.1.md  v0.3.1.post1.md
docs/reviews/: 2026-07_env_corruption_overflow_graph.md  2026-07_full_code_review.md  2026-07_tht_benchmark_findings.md  benchmark_recommender_cas_2026-07.md  repro_env_corruption_overflow_graph.py
expert_op4grid_recommender/: __init__.py  backends.py  cli.py  config.py  config_basic.py  data_loader.py  environment.py  environment_pypowsybl.py  exceptions.py  main.py  patched_alphadeesp.py  patched_backend.py  pipeline.py
expert_op4grid_recommender/action_evaluation/: action_types.py  classifier.py  discovery.py  rules.py
expert_op4grid_recommender/graph_analysis/: antenna_graph.py  builder.py  processor.py  visualization.py
expert_op4grid_recommender/manoeuvre/: CLAUDE.md  __init__.py  algo.py  cellules.py  graph.py  models.py  topologie.py  troncons.py
expert_op4grid_recommender/models/: __init__.py  _expert_discovery.py  base.py  expert.py
expert_op4grid_recommender/pypowsybl_backend/: README.md  __init__.py  action_space.py  methodologie_developpement_backend_pypowsybl.md  methodologie_pypowsybl.pptx  migration_guide.py  network_manager.py  observation.py  observation_timers.py  overflow_analysis.py  simulation_env.py  topology.py
expert_op4grid_recommender/utils/: action_rebuilder.py  conversion_actions_repas.py  conversion_actions_repas_original.py  data_utils.py  helpers.py  helpers_pypowsybl.py  load_evaluation_data.py  load_training_data.py  make_assistant_env.py  make_env_utils.py  make_training_env.py  reassessment.py  repas.py  simulation.py  simulation_pypowsybl.py  superposition.py
out_benchmark/: analysis_dijon.json  axes.json  axis_shed_fix.json  cases_tht_france.jsonl
scripts/: analyze_recommender_benchmark.py  apply_pypowsybl2grid_patch.py  benchmark_pipeline.py  benchmark_recommender_cases.py  benchmark_tht_france_cases.py  build_combination_scenarios.py  build_france_basemap.py  build_rte7000_blocks.py  code_quality_report.py  download_dgitt_subset.py  extract_test_fixtures.py  fetch_postes_geo.py  manoeuvre_ihm.py  patch_pypowsybl2grid_file.py  process_dgitt_days.sh  render_carrip3_sld.py  run_benchmark.py  test_improvement_axes.py  verify_incremental_branching.py
scripts/manoeuvre_ihm_assets/: index.html
tests/: DEBUG_CONFIG_OVERRIDE.md  HOW_TO_SKIP_VISUALIZATION.md  README_CONFIG.md  config_test.py  conftest.py  test_ActionClassifier.py  test_ActionDiscoverer.py  test_ActionRuleValidator.py  test_NodeSplittingDiscovery.py  test_action_rebuilder.py  test_action_types_enum.py  test_antenna_graph.py  test_backends_simulation_wiring.py  test_baseline_context_and_variant_registry.py  test_config_override.py  test_conversion_actions_helpers_vectorized.py  test_conversion_actions_repas.py  test_data_modules.py  test_detect_non_reconnectable_fast_path.py  test_direct_xiidm_loading.py  test_discovery_package_structure.py  test_discovery_results_model.py  test_env_reuse_dc_escalation.py  test_environment_detection.py  test_environment_pypowsybl.py  test_expert_op4grid_analyzer.py  test_extra_lines_to_cut_ids.py  test_filtered_candidate_actions_propagation.py  test_graph_analysis.py  test_helpers_pypowsybl_maintenance.py  test_initial_lf_voltage_init_mode.py  test_injection_base.py  test_islanding_mw.py  test_lazy_action_dict.py  test_lf_fallback_non_converged.py  test_load_data_modules.py  test_min_action_counts.py  test_models_base.py  test_models_expert.py  test_parallel_circuit_flow_cache.py  (+19 more)
tests/manoeuvre/: __init__.py  fixture_loader.py  test_algo.py  test_algo_entrypoint_guards.py  test_bxto5p3_mise_service.py  test_carrip3_3noeuds.py  test_carrip3_manoeuvre.py  test_cible_detaillee_optimalite.py  test_conformite_art_manoeuvre.py  test_couplers_memoisation.py  test_czbevp3_sectionneur_hors_tension.py  test_cztryp6_3noeuds.py  (+45 more)
(+402 files in other folders)
