[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expert_op4grid_recommender"
version = "0.1.1.post1"
authors = [
    { name="RTE", email="rte@rte-france.com" },
]
description = "Expert system recommender for power grid contingency analysis based on ExpertOp4Grid principles."
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "pandas",
    "networkx",
    "pypowsybl>=1.13.0",
    "pypowsybl2grid>=0.2.1",
    "expertop4grid>=0.2.8",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["expert_op4grid_recommender*"]
exclude = ["tests*", "venv*", "alphaDeesp*"]

[project.urls]
Homepage = "https://github.com/marota/Expert_op4grid_recommender"
Repository = "https://github.com/marota/Expert_op4grid_recommender"
Issues = "https://github.com/marota/Expert_op4grid_recommender/issues"
